--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -1,3 +1,45 @@
+<template id="dy-buttons">
+	<style>
+		:host {
+			display: flex;
+		}
+		:host([full]) {
+			display: block;
+		}
+
+		div {
+			margin: -0.5px;
+		}
+
+		::slotted(dy-button) {
+			margin: 0.5px;
+		}
+		::slotted(dy-button:first-child) {
+			--border-top-right-radius: 0;
+			--border-bottom-right-radius: 0;
+		}
+		::slotted(dy-button:not(:first-child)) {
+			--border-top-left-radius: 0;
+			--border-bottom-left-radius: 0;
+		}
+	</style>
+	<div>
+		<slot>
+	</div>
+</template>
+
+
+<script>
+class DYButtons extends DYElement {
+	connectedCallback(){
+		this.root
+	}
+}
+customElements.define('dy-buttons', DYButtons)
+</script>
+
+
+
 <template id="dy-button">
 	<style>
 		:host, button {
