Use <dy-buttons> / <dy-button>

--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -107,10 +107,10 @@
 		<img id="thumbnail">
 		<span>►Play</span>
 	</div>
-	<div class="buttons">
-		<button class="play-restart">Play</button>
-		<button class="stop">Stop</button>
-	</div>
+	<dy-buttons>
+		<dy-button theme="accented heavy 3D" class="play-restart">Play</dy-button>
+		<dy-button theme="accented heavy 3D" class="stop">Stop</dy-button>
+	</dy-buttons>
 	<dy-khan-badge id="fork"></dy-khan-badge>
 </template>
 
