--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -1,3 +1,5 @@
+<link rel="import" href="dy-style.html">
+
 <link rel="import" href="dy-header.html">
 <link rel="import" href="dy-project-header.html">
 <link rel="import" href="dy-sidebar.html">
