Support lone button

--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -14,7 +14,7 @@
 		::slotted(dy-button) {
 			margin: 0.5px;
 		}
-		::slotted(dy-button:first-child) {
+		::slotted(dy-button:first-child:not(:last-child)) {
 			--border-top-right-radius: 0;
 			--border-bottom-right-radius: 0;
 		}
