Import forms.css

--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -133,6 +133,8 @@
 
 <template id="dy-comment-reply">
 	<style>
+		@import './wp-content/themes/DY/assets/forms.css';
+		
 		:host {
 			animation: Reply var(--transition-slow);
 		}
