Import forms.css

--- a/src/assets/components/dy-sidebar.html
+++ b/src/assets/components/dy-sidebar.html
@@ -1,6 +1,7 @@
 <template id="dy-sidebar">
 	<style>
 		@import './wp-content/themes/DY/assets/sidebar.css';
+		@import './wp-content/themes/DY/assets/forms.css';
 	</style>
 	<aside>
 		<section>
