--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -206,17 +206,14 @@ class DYKhan extends DYElement {
 		})
 		
 		const $project = root.find('#project')
-		const $playRestartButton = root.find('.play-restart')
-		root.findAll('#project, .play-restart').on('click', function(){
+		root.findAll('#project, .play, .restart').on('click', function(){
 			$project.addClass('play')
 			//$project.find('iframe').src = project.embedded
 			$project.find('iframe').attr('src', project.embedded)
-			$playRestartButton.text('Restart')
 		})
 		root.find('.stop').on('click', function(){
 			$project.removeClass('play')
 			$project.find('iframe').attr('src', '')
-			$playRestartButton.text('Play')
 		})
 	}
 }
