Use <dy-button> disabled property

--- a/src/assets/components/dy-project-filters.html
+++ b/src/assets/components/dy-project-filters.html
@@ -48,7 +48,7 @@ class DYProjectFilters extends DYTerms {
 	includeTerms(termIDs){
 		for(const $term of this.$terms){
 			const term = this.$termToTerm.get($term)
-			$term.toggleClass(!termIDs.includes(term.term_id), 'disabled')
+			$term.disabled = !termIDs.includes(term.term_id)
 		}
 	}
 }
