Remove "category" base slug from archive links

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -85,15 +85,15 @@
 			</a>
 			<ul>
 				<li>
-					<a href="./category/code">Code</a>
+					<a href="./code">Code</a>
 					<dy-icon icon="code"></dy-icon>
 				</li>
 				<li>
-					<a href="./category/art">Art</a>
+					<a href="./art">Art</a>
 					<dy-icon icon="art"></dy-icon>
 				</li>
 				<li>
-					<a href="./category/music">Music</a>
+					<a href="./music">Music</a>
 					<dy-icon icon="music"></dy-icon>
 				</li>
 				<!--<li>
