Use connectedCallback() to avoid outdated references to window.$DYPage upon navigation

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -38,9 +38,7 @@
 
 <script>
 class DYPage extends DYElement {
-	constructor(){
-		super()
-
+	connectedCallback(){
 		window.$DYPage = this
 
 		const root = this.root
