Check that the header is not in full mode before fading main menu upon secondary sub-menu hover

--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -355,7 +355,7 @@ nav > ul > li ul > li > a {
 
 
 
-#secondary-menu.sub-menu-open ~ #header > nav > ul > li > a {
+#secondary-menu.sub-menu-open ~ #header:not(.full) > nav > ul > li > a {
 	opacity: 0;
 }
 /*body.sub-menu-open main > * > *,
