Add Pin Window experiment

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -74,6 +74,9 @@
 					<li>
 						<a data-experiment="ajax-navigation">AJAX Navigation</a>
 					</li>
+					<li>
+						<a data-experiment="pin-window">Pin Window</a>
+					</li>
 				</ul>
 			</li>
 		</ul>
