Fix text box layout

--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -149,6 +149,10 @@
 			}
 		}
 
+		header > * {
+			flex: 1;
+		}
+
 		input, input:focus, textarea, textarea:focus {
 			background: unset;
 			border: unset;
@@ -158,6 +162,7 @@
 			margin: unset;
 			padding: unset;
 			display: inline;
+			width: 100%;
 		}
 		textarea {
 			max-width: 100%;
