Use text-transform: uppercase when using the Fun Font

--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -89,6 +89,8 @@
 			font-family: var(--heading-font);
 			font-size: 1.5em;
 			font-weight: bold;
+
+			text-transform: uppercase;
 		}
 		#comment-date {
 			background: rgba(0, 0, 0, 0.05);
@@ -174,6 +176,8 @@
 			font-family: var(--heading-font);
 			font-size: 1.25em;
 			text-align: right;
+
+			text-transform: uppercase;
 		}
 	</style>
 	<img id="avatar">
