Make sure heading decorations aren't blocked

--- a/src/assets/article.css
+++ b/src/assets/article.css
@@ -25,6 +25,7 @@ article section > h2 {
 	position: relative;
 	display: flex;
 	align-items: center;
+	z-index: 1;
 }
 article section > h2:before {
 	content: "";
