--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -39,13 +39,13 @@
 
 			pointer-events: initial;
 		}
-		@media (max-height: 535px){
-			:host {
-				--tilt: 0;
-			}
-		}
 		:host(:hover:not(.focused)) {
 			--tilt: -5deg;
+		}
+		@media (max-height: 535px){
+			:host {
+				--tilt: 0 !important;
+			}
 		}
 		:host(.focused) {
 			--transition-duration: 0.4s;
