Decrease font size of "Based on" section

--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -102,6 +102,10 @@
 		#project.play ~ dy-buttons.show-if-not-playing {
 			display: none;
 		}
+
+		dy-khan-badge {
+			font-size: 0.8em;
+		}
 	</style>
 	<a class="link"><h3 id="title"></h3></a>
 	<dy-khan-stats id="stats">
