Use --padding-small in calculation of --dy-project-max-height

--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -10,7 +10,7 @@
 			height: var(--dy-projects-height);
 
 			--dy-project-max-width: calc(100vw - var(--padding) * 2);
-			--dy-project-max-height: calc(var(--dy-projects-height) - var(--padding) * 2);
+			--dy-project-max-height: calc(var(--dy-projects-height) - var(--padding-small) * 2);
 			
 			min-height: 20rem;
 			position: relative;
