Show/hide nav items based on what categories are in the currently viewed project

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -174,8 +174,12 @@ class DYHeader extends DYElement {
 
 			if(WP.queryType === 'front-page'){
 				this.showNavItems()
-			}else if(WP.queryType === 'archive'){
-				this.showNavItems(location.href.split('/').pop())
+			}else if(WP.queryType === 'single' && WP.postType === 'project'){
+				this.showNavItems(...WP.current.categories.map(id => WP.data.termsByID[id].slug))
+			}else if(WP.queryType === 'single' && WP.postType === 'post'){
+				this.showNavItems('blog')
+			}else{
+				this.showNavItems()
 			}
 		})
 
