--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -158,6 +158,7 @@
 			min-height: min-content;
 			padding-bottom: 0.5em;
 
+			--link-color: rgba(0, 0, 0, 0.85);
 			font-size: 0.8em;
 			text-align: left;
 
@@ -174,7 +175,6 @@
 			transform: translateZ(5px);
 		}
 		#title-wrapper h2 {
-			color: rgba(0, 0, 0, 0.85);
 			text-shadow: #fff 0 0 0.5em, #fff 0 0 1em;
 
 			line-height: 1.25;
