Use .throttle modifier

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -60,9 +60,9 @@ class DYPage extends DYElement {
 			})
 		})
 
-		window.on('scroll', (e => {
+		window.on('scroll.throttle', e => {
 			this.$toTop.classList[window.scrollY >= window.innerHeight * 0.5 ? 'add' : 'remove']('show')
-		}).throttle())
+		})
 		window.trigger('scroll')
 
 		$$('code:not([class*=lanugage-])').addClass('language-*')
